Fix mobile alignment

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ section#main a {
 section#main a > div {
   border: 2px solid #305489;
   width: 100%;
-  padding: 10px 10px;
+  padding: 10px 0px;
   margin: 20px auto;
   border-radius: 5px;
 }
